--- a/Services-main/about.css
+++ b/Services-main/about.css
@@ -51,6 +51,37 @@ body {
     height: 60px;
     margin-right: 10px;
 }
+.info-section {
+    background-image: url(./Images/About_us.jpg);
+    background-size: cover;
+    background-position: center;
+    padding: 260px 10px;
+    text-align: left; 
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center; 
+}
+
+.info-content {
+    background-color: rgba(0, 153, 0, 0.8);
+    color: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    max-width: 400px; 
+    margin-left: 200px; 
+}
+
+
+.info-content h2 {
+    margin: 0;
+    color: #ffffff;
+    font-size: 2em;
+}
+
+.info-content p {
+    margin-top: 10px;
+    font-size: 1.2em;
+}
 .sidebar{
     margin-top: 50px;
     padding-top: 40px;                 
@@ -333,6 +364,7 @@ footer .footer-bottom a {
 .menu-button a:hover{
     background-color: #ffffff;
 }
+
 /* Hide only the navigation links on screens 768px and smaller */
 @media screen and (max-width: 768px) {
     .navigation .hideOnMobile {
@@ -352,7 +384,7 @@ footer .footer-bottom a {
         display: none;
     }
  .info-section {        
-        background-image: url(./Images/Baground.jpg);
+        background-image: url(./Images/About_us.jpg);
         background-size:cover;
         background-position: center;
         padding: 120px 20px;
@@ -363,6 +395,7 @@ footer .footer-bottom a {
     }
     
     .info-content {
+        display: none;
         background-color: rgba(0, 153, 0, 0.8);
         color: #fff;
         padding: 15px;
