--- a/Services-main/join_us.css
+++ b/Services-main/join_us.css
@@ -796,8 +796,8 @@ footer .footer-bottom a {
 }  
 
 @media screen and (max-width: 768px) {
-    .video-container {
-        position: relative;
+    .video-container {        
+        position: relative;        
         padding-bottom: 56.25%; /* 16:9 aspect ratio */
         height: 0;
         overflow: hidden;
@@ -807,12 +807,12 @@ footer .footer-bottom a {
     }
 
     .video-container iframe {
-        position: absolute;
+        position: absolute;        
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        border: 0; /* Removes the border for a cleaner look */
+        
     }
 }
 @media screen and (max-width: 768px) {
@@ -836,18 +836,19 @@ footer .footer-bottom a {
 }
 @media screen and (max-width: 768px) {
     .join-us-section {
-        padding: 10px;
+        align-items: center;
+        
         max-width: 90%;
-        margin: 10px auto;
+        margin: 0px -5%;
     }
 
     .join-us-section h1, .join-us-section h2, .join-us-section h3 {
         font-size: 1.5em;
-        padding-left: 10px;
+        padding-left: 30px;
     }
 
     .join-us-section p {
-        padding-left: 10px;
+        padding-left: 30px;
         font-size: 1em;
     }
 
@@ -868,11 +869,12 @@ footer .footer-bottom a {
     }
 
     .blockquote {
-        padding-left: 15px;
+        padding-left: 30px;
     }
 
     .job-portal-button {
-        padding: 8px 16px;
+        margin: 10%;
+        padding: 15px 16px;
         font-size: 14px;
     }
 
