Bug-fixes and Alignments

--- a/Services-main/about.css
+++ b/Services-main/about.css
@@ -48,9 +48,10 @@ body {
 }
 
 .logo img {
-    height: 60px;
-    margin-right: 10px;
+    width: 150px;
+    height: auto;    
 }
+
 .info-section {
     background-image: url(./Images/About_us.jpg);
     background-size: cover;
@@ -299,8 +300,10 @@ footer .footer-right {
 }
 
 footer .footer-left img {
-    display: flex;
-    padding-left: 140px;
+    display: inline;
+    margin: 0 22%;
+    padding-bottom: 15px;
+    max-width: 140px;
     
 }
 
@@ -404,8 +407,7 @@ footer .footer-bottom a {
     }
     
     .logo img {
-        height: 60px;
-        margin-right: 10px;
+        width: 125px;        
     }
 /* General styles for the navigation */
 .navigation {
@@ -500,10 +502,13 @@ footer {
     }
     
     footer .footer-left img {
-        display: inline;        
-        padding: 0 20;        
+        display: inline;
+        margin: 0 -6%;        
+        padding: 0 10;
+        margin-top: 4%;
+        padding-left: 10%;        
         padding-bottom: 15px;
-        max-width: 100px; /* Adjust as needed */
+        max-width: 120px; /* Adjust as needed */
     }
     
     footer .footer-left p {
