--- a/Services-main/our_approach.css
+++ b/Services-main/our_approach.css
@@ -39,7 +39,7 @@ body {
     color: #000;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 210px;
+    padding: 15px 210px;
 }
 
 .logo {
@@ -48,8 +48,8 @@ body {
 }
 
 .logo img {
-    height: 70px;
-    margin-right: 10px;
+    width: 150px;
+    height: auto;    
 }
 .sidebarr {
     margin-top: 50px;
@@ -339,10 +339,13 @@ footer .footer-right {
 }
 
 footer .footer-left img {
-    display: flex;
-    padding-left: 140px;
+    display: inline;
+    margin: 0 22%;
+    padding-bottom: 15px;
+    max-width: 140px;
     
 }
+
 
 footer .footer-left p {
     padding-left: 140px;
@@ -429,7 +432,7 @@ footer .footer-bottom a {
         text-decoration: none;
             
     }   
-    .main-header {        
+    .main-header {
         display: flex;
         color: #000;
         justify-content: space-between;
@@ -442,8 +445,7 @@ footer .footer-bottom a {
     }
     
     .logo img {
-        height: 60px;
-        margin-right: 10px;
+        width: 125px;        
     }
 /* General styles for the navigation */
 .navigation {
@@ -533,10 +535,13 @@ footer .footer-right {
 }
 
 footer .footer-left img {
-    display: inline;        
-    padding: 0 20;        
+    display: inline;
+    margin: 0 -6%;        
+    padding: 0 10;
+    margin-top: 4%;
+    padding-left: 10%;        
     padding-bottom: 15px;
-    max-width: 100px; /* Adjust as needed */
+    max-width: 120px; /* Adjust as needed */
 }
 
 footer .footer-left p {
