--- a/Services-main/join_us.css
+++ b/Services-main/join_us.css
@@ -48,8 +48,8 @@ body {
 }
 
 .logo img {
-    height: 60px;
-    margin-right: 10px;
+    width: 150px;
+    height: auto;    
 }
 .sidebar {
     margin-top: 50px;
@@ -314,8 +314,10 @@ footer .footer-right {
 }
 
 footer .footer-left img {
-    display: flex;
-    padding-left: 140px;
+    display: inline;
+    margin: 0 22%;
+    padding-bottom: 15px;
+    max-width: 140px;
     
 }
 
@@ -415,8 +417,7 @@ footer .footer-bottom a {
     }
     
     .logo img {
-        height: 60px;
-        margin-right: 10px;
+        width: 125px;        
     }
 /* General styles for the navigation */
 .navigation {
@@ -514,10 +515,13 @@ footer {
     }
     
     footer .footer-left img {
-        display: inline;        
-        padding: 0 20;        
+        display: inline;
+        margin: 0 -6%;        
+        padding: 0 10;
+        margin-top: 4%;
+        padding-left: 10%;        
         padding-bottom: 15px;
-        max-width: 100px; /* Adjust as needed */
+        max-width: 120px; /* Adjust as needed */
     }
     
     footer .footer-left p {
@@ -603,53 +607,6 @@ footer {
     font-family: "Poppins", sans-serif;
     background-color: #f4f4f4;
     padding-top: 140px;
-}
-
-.header {    
-    background-color: #ffffff;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    z-index: 9999;
-    color: #ffffff; 
-}
-
-.top-bar {
-    display: flex;
-    justify-content: space-between;
-    padding: 14px 210px;    
-    background-color: #007500;    
-}
-.top-links a {
-    color: #fff;           
-    text-decoration: none;
-    margin-left: 20px;    
-}
-
-.top-links a:hover {
-    padding: 24px 10px;
-    background-color: #ffffff;
-    color: #007500;
-    text-decoration: none;
-    border-radius: auto; 
-}
-
-.main-header {
-    display: flex;
-    color: #000;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 210px;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-}
-
-.logo img {
-    height: 60px;
-    margin-right: 10px;
 }
 .sidebar {
     margin-top: 50px;
@@ -803,39 +760,6 @@ footer .footer-bottom a {
 }
 /* Responsive Design */
 @media screen and (max-width: 768px) {
-    body {
-        margin: 0;
-        font-family: "Poppins", sans-serif;
-        background-color: #f4f4f4;
-    }
-    .top-bar {
-        display: flex;
-        justify-content: center;
-        font-size: 15px;
-        padding: 10px 5px;    
-        background-color: #007500;    
-    }
-    .top-links a {
-        color: #fff;       
-        text-decoration: none;
-    }   
-    .main-header {
-        display: flex;
-        color: #000;
-        justify-content: space-between;
-        align-items: center;
-        padding: 30px 20px;
-    }
-    .logo {
-        display: flex;
-        align-items: center;
-    }
-    
-    .logo img {
-        height: 60px;
-        margin-right: 10px;
-    }
-
     /* General styles for the navigation */
     .navigation {
         display: flex;
